2018-11-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/NSURL+GNUstepBase.h:
	* Source/NSURL.m:
	Add [-cacheKey] method to return a key usable for caching HTTP URL
	connections that go to the same scheme, host and port.
	* Source/GSHTTPURLHandle.m:
	New [-setURL:] method to change the URL used by a handle so that
	a networek connection used by a handle can be re-used if possible
	(ie if the scheme, host and port parts are unchanged).

2018-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: Fixup for last modification ... still verify the
	certificate (so we can find out who issued/owns it) even if we do
	not have verification turned on ... the verification setting controls
	whether we reject the connection.  Also fixed off by one bug in
	getting the issuer and owner distinguished names.

2018-08-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: Change behavior so that when acting as a server we
	always request that the client sends us a certificate (if it doesn't
	have one, it should ignore the request). The 'verify' setting should
	control only whether a request without a certificate is rejected.

2018-08-08 Riccardo Mottola <rm@gnu.org>

	* configure.ac
	* configure:
	When checking for pthread_np.h include pthread.h if available or
	it may fail (e.g. OpenBSD).

2018-08-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Update the cache on change of volatile
	domain or search list, not just when perstistent domain values
	change.

2018-07-19  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: Updated zone info and corrected preferred
	abbreviation mappings to match OSX.

2018-07-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: improve utf8 validity checks,
	switch to state machine based utf8 parsing for better performance.
	* Tests/base/NSString/utf8.m: add a few tests for utf8 parsing.

2018-07-10  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: